    - Added the electromagnetic penetrator handheld weapon.
    - Added a full-featured trade loop finder as a quest reward from Gleba.
  Minor Features:
    - Added the "ping in chat" button for trades in the trade overview.
    - Added mod settings for tweaking trade productivity requirements for ranking up items.
  Changes:
    - The Sentient Spider is now equipped with six electromagnetic penetrators instead of one (buffed) teslagun.
    - Changed Sentient Spider recipe to reflect its new abilities.
    - Recalculated item values on Aquilo and Fulgora.
    - Clicking an item in a trade while a hex core is open now opens the trade overview instead of the catalog.
    - Dungeon hexes no longer contribute to the total trades found, preventing from quickly completing the "Find Some Trades" quest.
    - Removed the map colors of hexlights and hexports.
    - The item selector for trade contents in the trade overview now only shows items that can be found in trades.
    - Made the tooltips for the sink and generator buttons more concise.
    - Due to game engine performance issues on saves with thousands of trades showing in the trade overview, the maximum is now 250 total trades to be shown.
        This does not affect filtering or which trades are searched; it only keeps you from lagging the game with more UI elements than you could ever need.
  Gui:
    - Horizontally centered the "Bonuses" text in the catalog.
  Bugfixes:
    - Fixed crash when viewing red star ranked items if your character is missing (in editor mode, god mode, etc.).
    - Fixed crash when trying to sell the item stack in your hand at the Quantum Bazaar when nothing is held.
    - Fixed hexlights and hexports remaining after hex core deletion.
    - Fixed hexlights causing collision clipping at the corners of hex cores.
    - Fixed missing localization for inserter capacity in the item buffs.
    - Fixed resource patches floating over marsh tiles on Gleba.