@@ -254,6 +254,11 @@ hextorio-dungeon-chance-vulcanus=[planet=vulcanus] Dungeon Chance
 hextorio-dungeon-chance-fulgora=[planet=fulgora] Dungeon Chance
 hextorio-dungeon-chance-gleba=[planet=gleba] Dungeon Chance
 hextorio-dungeon-chance-aquilo=[planet=aquilo] Dungeon Chance
+hextorio-dungeon-loot-scale-nauvis=[planet=nauvis] Dungeon Loot Scale
+hextorio-dungeon-loot-scale-vulcanus=[planet=vulcanus] Dungeon Loot Scale
+hextorio-dungeon-loot-scale-fulgora=[planet=fulgora] Dungeon Loot Scale
+hextorio-dungeon-loot-scale-gleba=[planet=gleba] Dungeon Loot Scale
+hextorio-dungeon-loot-scale-aquilo=[planet=aquilo] Dungeon Loot Scale
 hextorio-base-trade-prod-nauvis=[planet=nauvis] Trade Productivity
 hextorio-base-trade-prod-vulcanus=[planet=vulcanus] Trade Productivity
 hextorio-base-trade-prod-fulgora=[planet=fulgora] Trade Productivity
@@ -385,6 +390,11 @@ hextorio-dungeon-chance-vulcanus=Chance of any newly charted hex spawning a dung
 hextorio-dungeon-chance-fulgora=Chance of any newly charted hex spawning a dungeon on [planet=fulgora].
 hextorio-dungeon-chance-gleba=Chance of any newly charted hex spawning a dungeon on [planet=gleba].
 hextorio-dungeon-chance-aquilo=Chance of any newly charted hex spawning a dungeon on [planet=aquilo].
+hextorio-dungeon-loot-scale-nauvis=Multiplier to total loot value in dungeon chests on [planet=nauvis].
+hextorio-dungeon-loot-scale-vulcanus=Multiplier to total loot value in dungeon chests on [planet=vulcanus].
+hextorio-dungeon-loot-scale-fulgora=Multiplier to total loot value in dungeon chests on [planet=fulgora].
+hextorio-dungeon-loot-scale-gleba=Multiplier to total loot value in dungeon chests on [planet=gleba].
+hextorio-dungeon-loot-scale-aquilo=Multiplier to total loot value in dungeon chests on [planet=aquilo].
 hextorio-base-trade-prod-nauvis=Trade productivity modifier on [planet=nauvis].
 hextorio-base-trade-prod-vulcanus=Trade productivity modifier on [planet=vulcanus].
 hextorio-base-trade-prod-fulgora=Trade productivity modifier on [planet=fulgora].
