@@ -1,0 +1,98 @@
+
+data:extend({
+    {
+        type = "int-setting",
+        name = "hextorio-dungeon-min-dist",
+        setting_type = "runtime-global",
+        default_value = 4,
+        minimum_value = 2,
+        order = "l[dungeons]-m[min-dist]",
+    },
+
+    {
+        type = "double-setting",
+        name = "hextorio-dungeon-chance-nauvis",
+        setting_type = "runtime-global",
+        default_value = 0.016,
+        minimum_value = 0,
+        maximum_value = 1,
+        order = "l[dungeons]-p[nauvis]-c[chance]",
+    },
+    {
+        type = "double-setting",
+        name = "hextorio-dungeon-chance-vulcanus",
+        setting_type = "runtime-global",
+        default_value = 0.025,
+        minimum_value = 0,
+        maximum_value = 1,
+        order = "l[dungeons]-p[vulcanus]-c[chance]",
+    },
+    {
+        type = "double-setting",
+        name = "hextorio-dungeon-chance-fulgora",
+        setting_type = "runtime-global",
+        default_value = 0.015,
+        minimum_value = 0,
+        maximum_value = 1,
+        order = "l[dungeons]-p[fulgora]-c[chance]",
+    },
+    {
+        type = "double-setting",
+        name = "hextorio-dungeon-chance-gleba",
+        setting_type = "runtime-global",
+        default_value = 0.025,
+        minimum_value = 0,
+        maximum_value = 1,
+        order = "l[dungeons]-p[gleba]-c[chance]",
+    },
+    {
+        type = "double-setting",
+        name = "hextorio-dungeon-chance-aquilo",
+        setting_type = "runtime-global",
+        default_value = 0.015,
+        minimum_value = 0,
+        maximum_value = 1,
+        order = "l[dungeons]-p[aquilo]-c[chance]",
+    },
+
+    {
+        type = "double-setting",
+        name = "hextorio-dungeon-loot-scale-nauvis",
+        setting_type = "runtime-global",
+        default_value = 1,
+        minimum_value = 0.01,
+        order = "l[dungeons]-p[nauvis]-c[loot-scale]",
+    },
+    {
+        type = "double-setting",
+        name = "hextorio-dungeon-loot-scale-vulcanus",
+        setting_type = "runtime-global",
+        default_value = 1,
+        minimum_value = 0.01,
+        order = "l[dungeons]-p[vulcanus]-c[loot-scale]",
+    },
+    {
+        type = "double-setting",
+        name = "hextorio-dungeon-loot-scale-fulgora",
+        setting_type = "runtime-global",
+        default_value = 1,
+        minimum_value = 0.01,
+        order = "l[dungeons]-p[fulgora]-c[loot-scale]",
+    },
+    {
+        type = "double-setting",
+        name = "hextorio-dungeon-loot-scale-gleba",
+        setting_type = "runtime-global",
+        default_value = 1,
+        minimum_value = 0.01,
+        order = "l[dungeons]-p[gleba]-c[loot-scale]",
+    },
+    {
+        type = "double-setting",
+        name = "hextorio-dungeon-loot-scale-aquilo",
+        setting_type = "runtime-global",
+        default_value = 1,
+        minimum_value = 0.01,
+        order = "l[dungeons]-p[aquilo]-c[loot-scale]",
+    },
+})
