@@ -1,5 +1,6 @@
 
 require "settings.hex_grid"
+require "settings.dungeons"
 require "settings.resources"
 require "settings.item_values"
 require "settings.trades"
